# bauer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  AUTHORS.rst  CITATION.cff  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api_reference.html  authors.html  concepts.html  contributing.html  environment.yml  environment_cuda.yml  genindex.html  history.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  test.yml
_modules/: index.html
_modules/bauer/: core.html
_sources/: concepts.rst.txt  index.rst.txt  usage.rst.txt
_sources/tutorial/: lesson2.ipynb.txt  lesson3.ipynb.txt  lesson4.ipynb.txt  lesson5.ipynb.txt  lesson8.ipynb.txt  lesson9.ipynb.txt
bauer/: __init__.py  cli.py  core.py  efficient_coding.py  estimation.py  models.py  models_add.py  numerosity.py
bauer/data/: bedi2026.csv  dehollander2024_risk.csv  dehollander2024_symbolic.csv  dehollander_tms_risk.csv  garcia2022.csv  garcia2022_magnitude.csv  garcia2022_risk.csv  neuralpriors.csv
bauer/fitting/: fit_efficient_coding.py  fit_numerosity.py
bauer/models/: __init__.py  ddm.py  legacy.py  magnitude.py  psychophysics.py  race.py  risky_choice.py
bauer/scripts/: fit_dehollander2024.py  fit_dehollander_tms.py  fit_for_lesson8.py  fit_garcia.py
bauer/utils/: __init__.py  bayes.py  data.py  math.py  plotting.py
docs/: Makefile  README.md  api_reference.rst  concepts.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt
docs/tutorial/: build_tutorials.sh  index.rst  lesson1.ipynb  lesson2.ipynb  lesson3.ipynb  lesson4.ipynb  lesson5.ipynb  lesson6.ipynb  lesson7.ipynb  lesson8.ipynb  lesson9.ipynb  make_notebooks.py  run_nb_streaming.py
examples/for_alina/: README.md  _make_pilot_dataset.py  fit_ddm.py  (+7 more)
notebooks/: analyze_dehollander.py  analyze_garcia.py  analyze_garcia2022.ipynb  analyze_garcia_sharedPercepNoise.ipynb  analyze_tms.py  change_csv.ipynb  compare_ddm_race.ipynb  cross_model_pairplots.py  dehollander_dotcloud_report.py  dehollander_symbolic_report.py  fit_ddm_garcia.py  fit_flexible_ddm_garcia.py  flexible_noise_garcia2022.ipynb  flexible_regression_model.ipynb  garcia_report.py  get_risk_data.ipynb  lapses.ipynb  recovery_risk.ipynb  runtimes_analysis.py  single_evidence_sd.ipynb  test.ipynb  test_flexible_sd_model.ipynb  test_klw_model.ipynb  test_loss_aversion_model.ipynb  test_loss_aversion_regressionmodel.ipynb  test_probability_distortion copy.ipynb  test_probability_distortion.ipynb  test_probrisk.ipynb  test_regression_model.ipynb  test_riskmodel.ipynb  test_simulation.ipynb  tms_report.py  try_ddm.ipynb  try_eu_model.ipynb  try_flexible_ddm.ipynb
notes/: ddm_convergence_lessons.md  fitting_ddm_models.md  powerlaw_ddm_rdm_for_collaborator.md  race_diffusion_math.md  regression_model_bug_briefing.md  tms_risk_ddm_fitting_brief.md  tutorial6_briefing.md
tests/: __init__.py  test_bauer.py  test_estimation_models.py  test_legacy.py  test_mcmc_smoke.py  test_models.py  test_transforms.py  test_utils.py
tutorial/: index.html  lesson1.html  lesson1.ipynb  lesson2.html  lesson2.ipynb  lesson3.html  lesson3.ipynb  lesson4.html  lesson4.ipynb  lesson5.html  lesson5.ipynb  lesson6.html  lesson6.ipynb  lesson7.html  lesson7.ipynb  lesson8.html  lesson8.ipynb  lesson9.html  lesson9.ipynb
(+42 files in other folders)
