[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bauer"
version = "0.2.0"
description = "Bayesian Estimation of Perceptual, Numerical and Risky Choice"
authors = [{ name = "Gilles de Hollander", email = "giles.de.hollander@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "pymc>=5",
    "pytensor",
    "arviz",
    "patsy",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "nbsphinx",
    "nbformat",
    "nbconvert",
    "jupyter",
    "furo",
]
dev = [
    "flake8",
    "pytest",
    "coverage",
]

[project.urls]
Homepage = "https://github.com/ruffgroup/bauer"
Documentation = "https://ruffgroup.github.io/bauer/"

[tool.setuptools.packages.find]
include = ["bauer", "bauer.*"]

[tool.setuptools.package-data]
bauer = ["data/*.csv"]
