[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bauer"
version = "0.2.0"
description = "Bayesian Estimation of Perceptual, Numerical and Risky Choice"
authors = [{ name = "Gilles de Hollander", email = "giles.de.hollander@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "pymc>=5",
    "pytensor",
    "arviz<1.0",
    "patsy",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "nbsphinx",
    "nbformat",
    "nbconvert",
    "jupyter",
    "furo",
]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
    "coverage",
]
ddm = [
    "hssm>=0.2",
    "jax",        # CPU build; for GPU additionally `pip install "jax[cuda12]"`
    "numpyro",    # the fast NUTS backend (backend='numpyro')
    "blackjax",
]

[project.urls]
Homepage = "https://github.com/ruffgroup/bauer"
Documentation = "https://ruffgroup.github.io/bauer/"

[tool.setuptools.packages.find]
include = ["bauer", "bauer.*"]

[tool.setuptools.package-data]
bauer = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that run real MCMC (deselect with -m 'not slow')",
]
filterwarnings = [
    # PyMC / xarray / arviz noise that fires on every test
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
]
